tests/neg-custom-args/fatal-warnings/i11333.scala
// val f1: Float  = 123456789  // error
val f2: Float  = 123456789L  // error
// val d1: Double = 1234567890123456789L  // error

//
//inline val i = 123456789
//val f2: Float = i  // error
